--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "dev": "ts-node ./src/app.ts"
   },
   "dependencies": {
+    "@types/cheerio": "^0.22.31",
     "@types/node": "^18.14.0",
+    "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
     "puppeteer": "^19.7.2",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@tsconfig/node16": "^1.0.3",
     "ts-node": "^10.9.1"
   },
   "packageManager": "yarn@3.4.1"
